# Assignment_1_Data_Analytics

./: README.md  balanced_risk_set_matching.ipynb  patients.csv  pyproject.toml
data/: generate.ipynb  simulated_patient_data.csv  synthetic_balanced_risk_set_matching.csv
src/: balanced_risk_set_matching.ipynb  simulation.ipynb
